--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -5,15 +5,15 @@ on:
 
 jobs:
   test_release:
-  name: test release
-  runs-on: ubuntu-latest
-  steps:
-- name: file test
-  run : |
-    mkdir ./测试
-    echo 测试 >./测试/测试.txt
-- name: upload test
-        uses: actions/upload-artifact@v4
-        with:
-          name: upload test
-          path: ./测试
+    name: test release
+    runs-on: ubuntu-latest
+    steps:
+    - name: file_test
+      run : |
+        mkdir ./测试
+        echo 测试 >./测试/测试.txt
+    - name: upload test
+      uses: actions/upload-artifact@v4
+      with:
+        name: upload test
+        path: ./测试
